--- a/index.html
+++ b/index.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 
-  <script src="js/jquery-1.12.0.js"></script>
-     <script src="js/scripts.js"></script>
+
 <div class="jumbotron">
     <title> PING PONG</title>
 </div>
 </head>
+
 <body>
   <div class="container">
 <h1>let's play!</h1>
-<p>RULES</p>
+<h2>About</h2>
+<p>created by: Sharon Kirui</p>
+<p>Github Username/url:chepkorir, https://github.com/Chepkorir</P>
+
+</div>
+
+<div class="rules">
+<h3>RULES</h3>
+<ol>
 <p>Ping Pong will count to your number 1 with the following exceptions:
-  1. Numbers divisible by 3 become "ping"
-  2. Numbers divisible by 5 become "pong"
-  3. Numbers divisible by 15 become "pingpong"
-<div class=""
+  <li> Numbers divisible by 3 become "ping"</li>
+  <li> Numbers divisible by 5 become "pong"</li>
+  <li> Numbers divisible by 15 become "pingpong"</li>
+</ol>
+</div>
+<div id="pingpong" class="formSection">
+  <div class="form-group">
+<form>
+    <label for="number">Enter your number here:</label>
+<input id="inputNumber" type="number" value="enter number">
+</div>
+
+<button type="submit" class="btn" id="submit">Lets Play!</button>
+</form>
+</div>
+</div>
+<div class="result">
+  <h3>Your results will be displayed here</h3>
+  <p id="checkInput"></p>
+  <ul id="output" class="pingText">
+  </ul>
 
 </div>
 
 
-
+   <script src="js/jquery-3.2.1.js"></script>
+   <script src="js/scripts.js"></script>
 </body>
   </html>
