add background gif

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <div class="background">
   <div class="container">
 <h1>let's play!</h1>
 <h2>About</h2>
@@ -41,7 +42,6 @@
 <button type="submit" class="btn" id="submit">Lets Play!</button>
 </form>
 </div>
-</div>
 <div class="result">
   <h3>Your results will be displayed here</h3>
   <p id="checkInput"></p>
@@ -50,7 +50,8 @@
 
 </div>
 
-
+</div>
+</div>
    <script src="js/jquery-3.2.1.js"></script>
    <script src="js/scripts.js"></script>
 </body>
